--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CCRP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tap tests/*.test.js",
     "start": "node index.js"
   },
   "author": "",
@@ -13,5 +13,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "googleapis": "^48.0.0"
+  },
+  "devDependencies": {
+    "supertest": "3.0.0",
+    "tape": "4.8.0",
+    "tape-promise": "2.0.1"
   }
 }
