--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "google-apis": "^1.0.0",
     "googleapis": "^48.0.0"
   },
   "devDependencies": {
