--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-config.js
+config.local.js
 credentials/*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
